--- a/.env.example
+++ b/.env.example
@@ -20,12 +20,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=pixofix_image
-DB_USERNAME=pixofix
-DB_PASSWORD=pixofix
+DB_CONNECTION=sqlite
+#DB_HOST=127.0.0.1
+#DB_PORT=3306
+#DB_DATABASE=pingcrm
+#DB_USERNAME=root
+#DB_PASSWORD=
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
