composer and package update

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ APP_NAME=PixoFixImage
 APP_ENV=local
 APP_KEY=base64:W8RyfCyME6MeGJnyV9hwUbnoIy7ED5OuFbjLpL/qt8E=
 APP_DEBUG=true
-APP_URL=http://127.0.0.1:8000/
+APP_URL=http://pixofix-image.test
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
