--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
         "filament/notifications": "^3.3",
         "flowframe/laravel-trend": "^0.4.0",
         "inertiajs/inertia-laravel": "^2.0",
+        "joaopaulolndev/filament-edit-profile": "^1.0",
         "laravel/framework": "^12.0",
+        "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
         "pusher/pusher-php-server": "^7.2",
         "spatie/laravel-permission": "^6.17",
